--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -299,6 +299,45 @@
           "selected_variant_hover_text_color": "#ffffff",
           "selected_variant_hover_border_color": "#1a1a1a"
         }
+      },
+      "scheme-7": {
+        "settings": {
+          "background": "#5d0f17",
+          "foreground_heading": "#ffffff",
+          "foreground": "#ffffff",
+          "primary": "#ffffff",
+          "primary_hover": "#cccccc",
+          "border": "#5d0f17",
+          "shadow": "#000000",
+          "primary_button_background": "#ffffff",
+          "primary_button_text": "#5d0f17",
+          "primary_button_border": "#ffffff",
+          "primary_button_hover_background": "#cccccc",
+          "primary_button_hover_text": "#000000",
+          "primary_button_hover_border": "#cccccc",
+          "secondary_button_background": "rgba(0,0,0,0)",
+          "secondary_button_text": "#ffffff",
+          "secondary_button_border": "#ffffff",
+          "secondary_button_hover_background": "rgba(0,0,0,0)",
+          "secondary_button_hover_text": "#cccccc",
+          "secondary_button_hover_border": "#cccccc",
+          "input_background": "#5d0f17",
+          "input_text_color": "#ffffff",
+          "input_border_color": "#ffffff",
+          "input_hover_background": "#801520",
+          "variant_background_color": "#ffffff",
+          "variant_text_color": "#000000",
+          "variant_border_color": "#e6e6e6",
+          "variant_hover_background_color": "#f5f5f5",
+          "variant_hover_text_color": "#000000",
+          "variant_hover_border_color": "#e6e6e6",
+          "selected_variant_background_color": "#000000",
+          "selected_variant_text_color": "#ffffff",
+          "selected_variant_border_color": "#000000",
+          "selected_variant_hover_background_color": "#1a1a1a",
+          "selected_variant_hover_text_color": "#ffffff",
+          "selected_variant_hover_border_color": "#1a1a1a"
+        }
       }
     }
   },
